--- a/CoalAssignment/Coal.Rmd
+++ b/CoalAssignment/Coal.Rmd
@@ -17,7 +17,7 @@ Building off the data handling that we did in class, your group assignment is to
 
 3. Convert the prices to real with the CPI.  Again quandl has what you need.
 
-2. Create a model with the lm function.  You can get as complicated as you like with the model, time trends, decades, log and square transformations.
+2. Create a model, or multiple models, with the lm function.  You can get as complicated as you like with the model, time trends, decades, log and square transformations.
 
 3.  Interpret each of the parameters in your model being very clear about units, e.g. a one dollar increase in the price per MBTU results in an ...
 
