--- a/IntroToRegression/IntroToRegression.Rmd
+++ b/IntroToRegression/IntroToRegression.Rmd
@@ -34,6 +34,7 @@ print("No Echo")
 1 + 1
 A <-  2 + 3
 A + 2
+A <- A+2
 B <- A + 4
 A + B
 C = A + B
@@ -46,7 +47,8 @@ Note that when you save values to variables you can see them in the Environment 
 Play with this in the chunk below and run to see what happens.
 
 ```{r}
-
+ThisIsAVariable <-10
+this_is_a_variable <-23
 ```
 
 
@@ -56,8 +58,9 @@ A <- "Shale"
 A
 C <- c("Tom", "Dick", "Harry")
 C
-
-1:10
+C[[1]]
+C[1]
+1:1000
 D <- 1:10
 D
 as.character(D)
@@ -75,7 +78,7 @@ There are many others, "list" being the most important not shown.
 
 ```{r}
 sqrt(D)
-#sqrt(A)
+# sqrt(A)
 
 sqrt(D[6])
 sqrt(D[1:3])
@@ -121,6 +124,7 @@ Now lets make pictures.
 
 ```{r}
 plot(MyData$Price)
+
 ```
 
 If you don't want to see the code and just the result, make sure to add echo=false to the chunk.  Here is a Histogram without the code.
@@ -273,7 +277,7 @@ This is the basics.  You now know enough to be insanely overconfident.  Don't de
 Beyond getting the specification wrong, which you usually support with several similar models that show similar results, there are common statistical problems that you learn about in econometrics
 
 + Autocorrelation, which makes your regression look better than it actually is.
-+ Heterskadasticity, which makes it worse.
++ Heteroskadasticity, which makes it worse.
 + Endogenaity, which biases your parameters in unknown directions.
 + Errors in variables (RHS), which bias parameters towards zero.
 + ...
