Added new reading and final nat gas slides.

--- a/SyllabusFall16.Rmd
+++ b/SyllabusFall16.Rmd
@@ -164,6 +164,7 @@ Each topic has some readings that both undergraduates and graduate students will
         + Dahl, Ch 8.
         + Energy Primer, Ch 2.
         + Joskow, Paul L.. 2013. "Natural Gas: From Shortages to Abundance in the United States." American Economic Review, 103(3): 338-43. http://stats.lib.pdx.edu/proxy.php?url=https://www.aeaweb.org/articles?id=10.1257/aer.103.3.338
+        + Culver, Walter J., and Mingguo Hong. "Coal’s decline: Driven by policy or technology?." The Electricity Journal 29.7 (2016): 50-61. http://www.sciencedirect.com/science/article/pii/S104061901630121X
     + Electricity
         + Energy Primer, Ch 3. 
         + Dahl, Ch 5-6.   
